--- a/pedal_share/user_profile/templates/user_profile/register_form.html
+++ b/pedal_share/user_profile/templates/user_profile/register_form.html
@@ -1,12 +1,14 @@
 {% extends "layout.html" %}
+{% load bootstrap4 %}
+
 
 {% block content %}
 <div class="container">
-      <h1 class="display-3">Welcome to Pedal Share</h1>
-    <form method="POST" action="">
+      <h1 class="display-3">Register</h1>
+    <form method="post" action="" role="form">
         {% csrf_token %}
         {% bootstrap_form form %}
-        {% bootstrap_form_errors form %}
-        {% bootstrap_button "Save" button_type="submit" %}
+        {% buttons submit="Save" reset="Cancel" %}{% endbuttons %}
     </form>
+{% endblock %}
 </div>
