--- a/pedal_share/templates/layout.html
+++ b/pedal_share/templates/layout.html
@@ -44,21 +44,17 @@
 
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+          <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown"
+             aria-haspopup="true" aria-expanded="false">Get Started</a>
           <div class="dropdown-menu" aria-labelledby="dropdown01">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
+            {% if not user.is_authenticated %}
+            <a class="dropdown-item" href="{% url 'user:login' %}">Login</a>
+            <a class="dropdown-item" href="{% url 'user:register' %}">Register</a>
+            {% endif %}
+            <a class="dropdown-item" href="#">Browse Pedals</a>
+            <a class="dropdown-item" href="#">Browse Libraries</a>
+            <a class="dropdown-item" href="#">Contact Us</a>
           </div>
         </li>
       </ul>
