password change works

--- a/pedal_share/templates/registration/password_reset_done.html
+++ b/pedal_share/templates/registration/password_reset_done.html
@@ -1,6 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block content %}
+<div class="container">
   <p>
     We have e-mailed instructions for you to reset your password.
   </p>
@@ -8,4 +9,5 @@
     If you don't receive an email, please make sure you've entered the address you registered with,
     and check your spam folder.
   </p>
+</div>
 {% endblock %}
