--- a/pedal_share/templates/registration/password_reset_form.html
+++ b/pedal_share/templates/registration/password_reset_form.html
@@ -10,4 +10,5 @@
         {% bootstrap_form form %}
         {% buttons submit="Submit" reset="Cancel" %}{% endbuttons %}
     </form>
+</div>
 {% endblock %}
