--- a/pedal_share/templates/registration/password_reset_complete.html
+++ b/pedal_share/templates/registration/password_reset_complete.html
@@ -1,7 +1,9 @@
 {% extends 'layout.html' %}
 
 {% block content %}
+<div class="container">
   <p>
     Your password has been set. You may go ahead and <a href="{% url 'user:login' %}">sign in</a> now.
   </p>
+</div>
 {% endblock %}
