--- a/pedal_share/templates/layout.html
+++ b/pedal_share/templates/layout.html
@@ -51,6 +51,8 @@
             {% if not user.is_authenticated %}
             <a class="dropdown-item" href="{% url 'user:login' %}">Login</a>
             <a class="dropdown-item" href="{% url 'user:register' %}">Register</a>
+            {% else %}
+            <a class="dropdown-item" href="{% url 'user:detail' %}">View Profile</a>
             {% endif %}
             <a class="dropdown-item" href="#">Browse Pedals</a>
             <a class="dropdown-item" href="#">Browse Libraries</a>
