--- a/pedal_share/templates/layout.html
+++ b/pedal_share/templates/layout.html
@@ -9,7 +9,9 @@
   <meta name="generator" content="Jekyll v4.1.1">
   <title>{% block title %}{% endblock %}</title>
 
-  <!--<link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/jumbotron/">-->
+  <!-- Star Ratings CSS and Script -->
+  <link rel="stylesheet" href="{% static 'star-ratings/css/star-ratings.css' %}">
+  <script type="text/javascript" src="{% static 'star-ratings/js/dist/star-ratings.min.js' %}"></script>
 
   <!-- Bootstrap core CSS -->
   {% bootstrap_css %}
